<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/default_message" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onLogClick"
        android:text="@string/log" />

    <Button
        android:id="@+id/toastButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toastClick"
        android:text="@string/welcome_toast" />

    <Button
        android:id="@+id/rewriteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="rewriteClick"
        android:text="@string/rewrite_message" />

    <TextView
        android:id="@+id/rewriteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rewrite_text" />

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="newActivity"
        android:text="@string/zaloguj"/>


</LinearLayout>