<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8e8e8e"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="30dp"
        android:background="#ff0000"
        android:padding="15dp"
        android:text="@string/hello_android"
        android:textColor="#00ff00" />

    <Button
        android:id="@+id/welcomeButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:gravity="end"
        android:padding="30dp"
        android:text="@string/button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/left" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/right" />
    </LinearLayout>
</LinearLayout>




